@@ -2,6 +2,7 @@
 
 = 1.7.6 =
 - Added: OceanWP SVG icons.
+- Added: Custom body classes in page level setting #329
 
 = 1.7.5 =
 - Added: New demos
